# jimmyjbling-cookiecutter

./: LICENSE  README.md  cookiecutter.json  test.py
hooks/: post_gen_project.py
{{cookiecutter.__repo_name__}}/: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.md  LICENSE  README.md  pyproject.toml
{{cookiecutter.__repo_name__}}/.github/: docs.yaml
{{cookiecutter.__repo_name__}}/docs/: conf.py
{{cookiecutter.__repo_name__}}/src/{{cookiecutter.__project_slug__}}/: __init__.py
{{cookiecutter.__repo_name__}}/tests/: test_{{cookiecutter.__project_slug__}}.py
